homeworks/kube/08/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
            - name: ssl-certs
              mountPath: /etc/nginx/ssl
      volumes:
        - name: html-volume
          configMap:
            name: my-html-config
        - name: ssl-certs
          secret:
            secretName: my-ssl-secret
